--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.7.0",
-	"appid": "wxf05e63263a867e02",
+	"appid": "wxac3969132c1ac346",
 	"projectname": "%E5%9C%9F%E8%B1%86%E8%BF%B7%E4%BD%A0%E5%B0%8F%E9%97%B9%E9%93%83",
 	"debugOptions": {
 		"hidedInDevtools": []
